--- a/.gitignore
+++ b/.gitignore
@@ -16,4 +16,6 @@ Thumbs.db
 # pdf files
 resume_2018/cover_letter_2018.pdf
 resume_2018/resume_2018.pdf
+resume_2018/resume_2019.pdf
 resume_2018/resume_comment_2.pdf
+resume_2019/resume_2019.pdf
