--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,8 @@ Thumbs.db
 *.synctex.gz
 *.xdv
 # pdf files
-resume_2018/cover_letter_2018.pdf
-resume_2018/resume_2018.pdf
-resume_2018/resume_2019.pdf
-resume_2018/resume_comment_2.pdf
-resume_2019/resume_2019.pdf
+#resume_2018/cover_letter_2018.pdf
+#resume_2018/resume_2018.pdf
+#resume_2018/resume_2019.pdf
+#resume_2018/resume_comment_2.pdf
+#resume_2019/resume_2019.pdf
